se ha cambiado el estilo, se agrego funcionalidad para ver en modal, se agrego contador de cart y mensaje temporal

--- a/fake-store/index.html
+++ b/fake-store/index.html
@@ -10,10 +10,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-
-
-
-
     </head>
     <body>
         <header class="store-header">
@@ -25,14 +21,19 @@
                 <label for="category-select">Selecciona una categoría:</label>
                 <select class="category-selector" id="category-select" name="category"></select>
             </form>
-
         </header>
-
         <main class="container">
             <div class="products-grid" id="store">
             </div>
         </main>
-    
         <script type="module" src="script.js"></script>
     </body>
     </html>
+
+<!-- 
+
+css, html, js vanilla :)
+
+by https://dev.arturoiwnl.pro/ 
+
+-->
