--- a/advice-generator/index.html
+++ b/advice-generator/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Consejos - proyect #1</title>
+    <title>Generador de Consejos - project #1</title>
     <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
                 <img src="assets/images/divider.svg" alt="">
             </div>
             <button class="dice-button" id="generate-button" title="Generar consejo">
-              <img src="assets/images/genButton.svg" alt="boton para generar el consejo aleatorio">
+                <img src="assets/images/genButton.svg" alt="boton para generar el consejo aleatorio">
             </button>
         </div>
     </main>
