--- a/multi-step-form/index.html
+++ b/multi-step-form/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario con pasos multiples - proyect #3</title>
+    <title>Formulario con pasos multiples - project #3</title>
     <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
