--- a/simple-gallery/index.html
+++ b/simple-gallery/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería de Fotos - proyect #4</title>
+    <title>Galería de Fotos - project #4</title>
     <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
